# UnrealEngine

./: .editorconfig  .gitignore  Default.uprojectdirs  GenerateProjectFiles.bat  GenerateProjectFiles.sh  README.md  Setup.bat  Setup.sh
Engine/Config/: BaseDeviceProfiles.ini  BaseEditor.ini  BaseEditorPerProjectUserSettings.ini  BaseEditorSettings.ini  BaseEngine.ini  BaseGame.ini  BaseHardware.ini  BaseInput.ini  BaseLightmass.ini  BasePakFileRules.ini  BaseScalability.ini  ConfigRedirects.ini  ConsoleVariables.ini  DefaultEngine.ini
Engine/Source/: UE4Client.Target.cs  UE4Editor.Target.cs  UE4Game.Target.cs  UE4Server.Target.cs  UE5Editor.Target.cs  UnrealClient.Target.cs  UnrealEditor.Target.cs  UnrealGame.Target.cs  UnrealServer.Target.cs  global.json
Engine/Source/Runtime/BinkAudioDecoder/SDK/BinkAudio/: BuildForMac.command  CMakeLists.txt
Engine/Source/Runtime/BinkAudioDecoder/SDK/BinkAudio/Include/: binka_ue_encode.h  binka_ue_file_header.h
Engine/Source/Runtime/BinkAudioDecoder/SDK/BinkAudio/Src/: binka_ue_decode.cpp  binka_ue_encode.cpp  binka_ue_encode.h  binkace.c  binkace.h  popmal.c  popmal.h  radmath.h  ranged_log.cpp  varbits.c  varbits.h  x86_cpu.c
Samples/MobileStarterContent/: manifest.json
Samples/StarterContent/: manifest.json
Templates/: TemplateCategories.ini
Templates/FP_FirstPerson/: manifest.json
Templates/FP_FirstPersonBP/: manifest.json
Templates/TP_2DSideScroller/: manifest.json
Templates/TP_2DSideScrollerBP/: manifest.json
Templates/TP_AEC_ArchvisBP/: TP_AEC_ArchvisBP.uproject
Templates/TP_Blank/: TP_Blank.uproject  (+1 more)
(+67158 files in other folders)
